# TestPyPI-sandbox

./: LICENSE  README.md  pyproject.toml  testpypi_sandbox.py
.github/workflows/: python-package.yml  release.yml
tests/: test_testpypi_sandbox.py
